--- a/app/globals.css
+++ b/app/globals.css
@@ -8,11 +8,11 @@
   --background-end-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: dark) {
+@media {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --foreground-rgb: 256, 256, 256;
+    --background-start-rgb: 256, 256, 256;
+    --background-end-rgb: 256, 256, 256;
   }
 }
 
